--- a/package.json
+++ b/package.json
@@ -6,15 +6,33 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --watch"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "formik": "^2.2.9",
+    "md5": "^2.3.0",
+    "mongoose": "^6.7.2",
+    "msw": "^0.49.0",
     "next": "13.0.2",
+    "next-auth": "^4.16.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.6.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@testing-library/dom": "^8.19.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
+    "autoprefixer": "^10.4.13",
     "eslint": "8.27.0",
-    "eslint-config-next": "13.0.2"
+    "eslint-config-next": "13.0.2",
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
+    "postcss": "^8.4.18",
+    "tailwindcss": "^3.2.3"
   }
 }
